<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:src="@drawable/eko2"/>
                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:layout_marginLeft="2dp"
                        android:src="@drawable/eko"/>

                </LinearLayout>
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eko_prasetyo"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:textSize="28dp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mahasiswa_informatika_upgris"
                android:layout_marginLeft="16dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/eko"/>

                    <TextView
                        style="@style/TextTujuan"
                        android:text="@string/ini_adalah_aplikasi_profil_saya_guna_memenuhi_project_uts_mobile_programing"
                        />

                </TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_profil"
                        />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:layout_marginRight="16dp"
                        android:text="Nama"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:layout_weight="1"
                        android:text="@string/eko_prasetyo"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/npm"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:layout_weight="1"
                        android:text="17670062"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/semester"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:layout_weight="1"
                        android:text="@string/enam"
                        android:textColor="@android:color/black"/>
                </TableRow>

            </TableLayout>
            <Button
                android:id="@+id/git"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/github"
                android:textColor="#fff"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDark"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>